# ToonPrompt

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/toonprompt-check/: action.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  homebrew-tap.yml  ops-readiness.yml  release.yml
benchmarks/: baseline.json
benchmarks/fixtures/: mixed_prompt.txt  nested_nodes.json  repeated_logs.txt
compatibility/: cli_matrix.json
docs/: OPERATIONS.md  REDACTION.md  RELEASING.md  cli-reference.md  configuration.md  ecosystem.md  index.md  quickstart.md  sdk.md
docs/enterprise/: audit.md  otel.md  profiles.md
integrations/github-action/toonprompt-check/: README.md  action.yml
integrations/vscode/toonprompt-vscode/: README.md  package.json  tsconfig.json
integrations/vscode/toonprompt-vscode/src/: extension.ts
packaging/homebrew/Formula/: toonprompt.rb
scripts/: benchmark_ci.py  benchmark_fixtures.py  configure_branch_protection.sh  update_homebrew_formula.py  verify_release_readiness.py
src/toonprompt/: __init__.py  adapters.py  audit.py  cli.py  config.py  detector.py  errors.py  estimators.py  format.py  logging_utils.py  metrics.py  models.py  output.py  plugins.py  policy.py  scoring.py  sdk.py  segment_transformers.py  serializer.py  services.py  telemetry.py  transformer.py
src/toonprompt/compressors/: __init__.py  log_compressor.py  stacktrace_compressor.py  yaml_compressor.py
tests/: test_adapters.py  test_cli.py  test_compatibility.py  test_compressors.py  test_config.py  test_estimators.py  test_format.py  test_golden.py  test_metrics.py  test_properties.py  test_sdk.py  test_security_telemetry.py  test_services.py  test_transformer.py
tests/golden/json_nodes/: expected.txt  input.txt
tests/golden/log_lines/: expected.txt
tests/golden/malformed_json/: input.txt
tests/golden/mixed_fenced_json/: expected.txt  input.txt
tests/golden/mixed_plain/: expected.txt
tests/integration/: test_cli_e2e.py
